--- a/ReqnrollProject1/ReqnrollProject1.csproj
+++ b/ReqnrollProject1/ReqnrollProject1.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.Reqnroll" Version="2.12.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Reqnroll.NUnit" Version="2.2.1" />
     <PackageReference Include="nunit" Version="3.14.0" />
