--- a/ReqnrollProject1/ReqnrollProject1.csproj
+++ b/ReqnrollProject1/ReqnrollProject1.csproj
@@ -19,4 +19,10 @@
     <Folder Include="Support\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="download.jfif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
